plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "8.1.1"
    id 'net.minecrell.plugin-yml.bukkit' version '0.5.3'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group 'cz.raixo'
version '2.1.4'

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
    maven {
        name "papermc"
        url "https://repo.papermc.io/repository/maven-public/"
    }
    maven {
        name "essentialsx-releases"
        url "https://repo.essentialsx.net/releases/"
    }
    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
    maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    maven { url = "https://repo.aikar.co/content/groups/aikar/" }
    maven { url = "https://repo.minebench.de/" }
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
    maven { url = 'https://nexus.iridiumdevelopment.net/repository/maven-releases/' }
}

dependencies {
    compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    compileOnly 'net.essentialsx:EssentialsX:2.20.1'
    compileOnly 'com.github.decentsoftware-eu:decentholograms:2.9.7'
    compileOnly 'me.clip:placeholderapi:2.11.1'
    compileOnly 'net.luckperms:api:5.4'
    compileOnly fileTree(dir: './libs', include: '*.jar')

    implementation "co.aikar:acf-bukkit:0.5.1-SNAPSHOT"
    implementation 'de.themoep:minedown-adventure:1.7.1-SNAPSHOT'
    implementation 'com.iridium:IridiumColorAPI:1.0.9'

    implementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    runtimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

shadowJar {
    archiveFileName = "MineBlocks-${project.version}.jar"
    relocate 'co.aikar.commands', 'cz.raixo.blocks.libs.acf'
    relocate 'co.aikar.locales', 'cz.raixo.blocks.libs.acf.locales'
    relocate 'de.themoep.minedown', 'cz.raixo.blocks.libs.minedown'
    relocate 'net.kyori.adventure', 'cz.raixo.blocks.libs.adventure'
    relocate 'net.kyori.examination', 'cz.raixo.blocks.libs.adventure.examination'
    relocate 'org.intellij', 'cz.raixo.blocks.libs.annotations.intellij'
    relocate 'org.jetbrains', 'cz.raixo.blocks.libs.annotations.jetbrains'
    relocate 'com.iridium', 'cz.raixo.blocks.libs.iridium'
}

bukkit {
    name = "MineBlocks"
    description = "Easy to use plugin, that allows you to create \"Mine blocks\" on your server"
    version = project.version
    main = "cz.raixo.blocks.MineBlocksPlugin"
    author = "RAIXOCZ"
    website = "mb.raixo.cz"
    apiVersion = "1.16"
    load = "POSTWORLD"
    softDepend = [
        "DecentHolograms",
        "PlaceholderAPI",
        "LuckPerms",
        "CMI",
        "Essentials",
        "UltraAFK",
        "AFKPlus"
    ]
}